--- a/Custom_Table/Base.lproj/Main.storyboard
+++ b/Custom_Table/Base.lproj/Main.storyboard
@@ -1,24 +1,163 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q5c-Y9-uEb">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Custom_Table" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6f9-RZ-1uf">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CustomTableViewCell" rowHeight="96" id="gna-Z3-pVF" customClass="CustomTableViewCell" customModule="Custom_Table" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="96"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gna-Z3-pVF" id="CD2-ec-db5">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="96"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OUH-72-Ub5">
+                                                    <rect key="frame" x="12" y="12" width="80" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="ZOP-8T-3UL"/>
+                                                        <constraint firstAttribute="width" constant="80" id="ejZ-O8-q6r"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyM-sd-z0S">
+                                                    <rect key="frame" x="104" y="12" width="298" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="PBg-R5-GfU"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLo-0D-ueY">
+                                                    <rect key="frame" x="104" y="54" width="298" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="OUH-72-Ub5" firstAttribute="leading" secondItem="CD2-ec-db5" secondAttribute="leading" constant="12" id="5fx-Ge-ceH"/>
+                                                <constraint firstAttribute="trailing" secondItem="kLo-0D-ueY" secondAttribute="trailing" constant="12" id="H9G-sb-hI3"/>
+                                                <constraint firstItem="LyM-sd-z0S" firstAttribute="leading" secondItem="OUH-72-Ub5" secondAttribute="trailing" constant="12" id="SEt-Dy-NST"/>
+                                                <constraint firstItem="LyM-sd-z0S" firstAttribute="top" secondItem="CD2-ec-db5" secondAttribute="top" constant="12" id="T9b-4F-BRW"/>
+                                                <constraint firstItem="kLo-0D-ueY" firstAttribute="leading" secondItem="OUH-72-Ub5" secondAttribute="trailing" constant="12" id="bcu-ZU-Tdf"/>
+                                                <constraint firstAttribute="trailing" secondItem="LyM-sd-z0S" secondAttribute="trailing" constant="12" id="hn5-uO-oDd"/>
+                                                <constraint firstItem="OUH-72-Ub5" firstAttribute="top" secondItem="CD2-ec-db5" secondAttribute="top" constant="12" id="pMW-Ru-sH3"/>
+                                                <constraint firstItem="kLo-0D-ueY" firstAttribute="top" secondItem="LyM-sd-z0S" secondAttribute="bottom" constant="12" id="sU6-ct-lHX"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="img_View" destination="OUH-72-Ub5" id="yeQ-PJ-1dW"/>
+                                            <outlet property="lbl_name" destination="LyM-sd-z0S" id="LGa-6m-LJJ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="DJO-zL-1vM"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="332-wu-ScE"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bbP-ce-FVV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6f9-RZ-1uf" firstAttribute="leading" secondItem="bbP-ce-FVV" secondAttribute="leading" id="I0t-bH-voW"/>
+                            <constraint firstItem="bbP-ce-FVV" firstAttribute="bottom" secondItem="6f9-RZ-1uf" secondAttribute="bottom" id="MtQ-CB-1lJ"/>
+                            <constraint firstItem="bbP-ce-FVV" firstAttribute="trailing" secondItem="6f9-RZ-1uf" secondAttribute="trailing" id="S8z-38-B4l"/>
+                            <constraint firstItem="6f9-RZ-1uf" firstAttribute="top" secondItem="bbP-ce-FVV" secondAttribute="top" id="vBU-bB-OS1"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="qz9-Bx-VoO"/>
+                    <connections>
+                        <outlet property="table_Data" destination="6f9-RZ-1uf" id="MzU-k5-fM7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1108.6956521739132" y="120.53571428571428"/>
+        </scene>
+        <!--Sceond View Controller-->
+        <scene sceneID="Ovr-Au-NjN">
+            <objects>
+                <viewController storyboardIdentifier="SceondViewController" id="xZ0-Wg-2QT" customClass="SceondViewController" customModule="Custom_Table" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BbF-FZ-xnG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2m5-2t-pOC">
+                                <rect key="frame" x="127" y="268" width="160" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="8b7-NV-xZs"/>
+                                    <constraint firstAttribute="height" constant="160" id="UcH-1Q-Myo"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KFI-MP-QhL">
+                                <rect key="frame" x="0.0" y="446" width="414" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Rgb-Yv-m7s"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="did-Wi-BPA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2m5-2t-pOC" firstAttribute="centerY" secondItem="BbF-FZ-xnG" secondAttribute="centerY" constant="-100" id="0uR-Ed-tJ8"/>
+                            <constraint firstItem="did-Wi-BPA" firstAttribute="trailing" secondItem="KFI-MP-QhL" secondAttribute="trailing" id="Jbs-5v-RJ9"/>
+                            <constraint firstItem="KFI-MP-QhL" firstAttribute="top" secondItem="2m5-2t-pOC" secondAttribute="bottom" constant="18" id="KrG-2E-Lyr"/>
+                            <constraint firstItem="2m5-2t-pOC" firstAttribute="centerX" secondItem="did-Wi-BPA" secondAttribute="centerX" id="Vv8-lv-kK6"/>
+                            <constraint firstItem="KFI-MP-QhL" firstAttribute="leading" secondItem="did-Wi-BPA" secondAttribute="leading" id="ala-rB-6T0"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="img_View" destination="2m5-2t-pOC" id="t3J-Lx-hph"/>
+                        <outlet property="lbl_Name" destination="KFI-MP-QhL" id="qX8-4w-hHN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yPl-tN-0Mh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1828.985507246377" y="120.53571428571428"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IJC-C3-mRT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="q5c-Y9-uEb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SH0-Gp-tcu">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="jK5-LR-xDf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m6F-9c-teI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="198.55072463768118" y="120.53571428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
